--- a/css/styles.css
+++ b/css/styles.css
@@ -156,21 +156,60 @@ header address a {
 .features ul {
   list-style: none;
   padding: 0;
-  display: flex;
+  display: block;
   gap: 24px;
+}
+.features-section {
+  margin-top: 120px;
+  margin-bottom: 120px;
 }
 .features li {
   margin-bottom: 40px;
+  list-style-type: none;
+  width: 264px;
 }
-.feature-icon {
-  transition: transform 0.25s cubic-bezier(0.4, 0, 0.2, 1),
-    box-shadow 0.25s cubic-bezier(0.4, 0, 0.2, 1);
+.icon-icon-antenna,
+.icon-icon-clock,
+.icon-icon-diagram,
+.icon-icon-astronaut {
+  width: 64px;
 }
-.feature-icon:hover {
-  transform: scale(1.15);
-  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08);
-  box-shadow: 0px 1px 1px 0px rgba(46, 47, 66, 0.16);
-  box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+.features-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+  justify-content: center;
+}
+
+.featuresicon {
+  width: 264px;
+  padding: 24px;
+  background-color: #f4f4fd;
+  border-radius: 4px;
+}
+
+.topicon {
+  width: 264px;
+  height: 112px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #f4f4fd;
+  border-radius: 4px;
+  border: 1px solid #8e8f99;
+  margin-bottom: 16px;
+}
+.featuresp {
+  width: 264px;
+  height: 72px;
+}
+.featuresicon svg {
+  width: 64px;
+  height: 64px;
+  fill: #2e2f42;
 }
 .features-name {
   line-height: 1.5;
@@ -196,9 +235,8 @@ header address a {
   display: flex;
   gap: 24px;
   justify-content: space-around;
-  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08);
-  box-shadow: 0px 1px 1px 0px rgba(46, 47, 66, 0.16);
-  box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+  box-shadow: 0px 2px rgba(46, 47, 66, 0.08);
+  box-shadow: 0px 1px rgba(46, 47, 66, 0.16);
 }
 .team-name {
   line-height: 1.5;
@@ -211,26 +249,46 @@ header address a {
   margin-top: -24px;
   font-size: 16px;
 }
-.socialmedia-icon {
+.social {
+  display: flex;
+  gap: 24px;
+  justify-content: center;
+}
+.social-icon-wrapper {
+  display: block;
+  gap: 24px;
+  margin-bottom: 32px;
+}
+.team li {
+  box-shadow: 0px 4px 8px rgba(46, 47, 66, 0.08),
+    0px 2px 4px rgba(46, 47, 66, 0.08), 0px 4px 12px rgba(46, 47, 66, 0.08);
+}
+
+.social-icon-wrapper,
+.socialmedia {
   width: 40px;
   height: 40px;
-  padding: 10px;
-  margin-left: 18px;
-  margin-bottom: 24px;
-  background-color: rgba(77, 90, 229, 1);
-  display: inline-flex;
+  list-style-type: none;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  display: flex;
   justify-content: center;
   align-items: center;
-  border-radius: 50%;
-  transition: transform 0.25s cubic-bezier(0.4, 0, 0.2, 1),
-    box-shadow 0.25s cubic-bezier(0.4, 0, 0.2, 1);
-  box-shadow: 0 1px 3px rgba(77, 90, 229, 0.7);
-  cursor: pointer;
+  transition: background-color 0.3s ease, color 0.3s ease;
 }
-.socialmedia-icon:hover {
-  transform: scale(1.15);
-  box-shadow: 0 4px 8px rgba(77, 90, 229, 0.9);
+
+.socialmedia:hover {
+  background-color: rgba(49, 208, 170, 1);
 }
+
+.icon-icon-instagram,
+.icon-icon-twitter,
+.icon-icon-facebook,
+.icon-icon-linkedin {
+  width: 16px;
+  height: 16px;
+}
+
 .portfolio ul {
   list-style: none;
   display: grid;
@@ -285,24 +343,60 @@ header address a {
 }
 
 .portfolio li:hover {
-  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08);
-  box-shadow: 0px 1px 1px 0px rgba(46, 47, 66, 0.16);
-  box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+  box-shadow: 0px 2px rgba(46, 47, 66, 0.08);
+  box-shadow: 0px 1px rgba(46, 47, 66, 0.08);
 }
+.portimage-wrapper {
+  position: relative;
+  overflow: hidden;
+}
+
+.portimage {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+.overlay-box {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(77, 90, 229, 0.9);
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  font-size: 18px;
+  text-align: center;
+  padding: 20px;
+  box-sizing: border-box;
+}
+
+.portimage-wrapper:hover .overlay-box {
+  opacity: 1;
+}
+
 .footer {
   background-color: #2e2f42;
   color: #f4f4fd;
   padding: 40px 20px;
   text-align: left;
 }
-.socialmediaalt {
-  text-align: center;
-  margin: 20px;
-  margin-right: 200px;
-}
 .flow {
-  margin-top: -120px;
+  margin-top: 16px;
 }
-.media {
-  margin-left: 375px;
+
+.altsocial {
+  margin-top: -45px;
+  margin-right: -120px;
+}
+.asocial {
+  display: flex;
+  gap: 24px;
+  justify-content: center;
+  margin-top: -70px;
 }
