--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@ a {
 }
 nav a:hover,
 address a:hover {
-  color: #4d5ae5;
+  color: rgba(64, 75, 191, 1);
 }
 header {
   display: flex;
@@ -235,8 +235,6 @@ header address a {
   display: flex;
   gap: 24px;
   justify-content: space-around;
-  box-shadow: 0px 2px rgba(46, 47, 66, 0.08);
-  box-shadow: 0px 1px rgba(46, 47, 66, 0.16);
 }
 .team-name {
   line-height: 1.5;
@@ -260,8 +258,11 @@ header address a {
   margin-bottom: 32px;
 }
 .team li {
-  box-shadow: 0px 4px 8px rgba(46, 47, 66, 0.08),
-    0px 2px 4px rgba(46, 47, 66, 0.08), 0px 4px 12px rgba(46, 47, 66, 0.08);
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08);
+
+  box-shadow: 0px 1px 1px 0px rgba(46, 47, 66, 0.16);
+
+  box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 
 .social-icon-wrapper,
@@ -274,11 +275,6 @@ header address a {
   display: flex;
   justify-content: center;
   align-items: center;
-  transition: background-color 0.3s ease, color 0.3s ease;
-}
-
-.socialmedia:hover {
-  background-color: rgba(49, 208, 170, 1);
 }
 
 .icon-icon-instagram,
@@ -297,7 +293,7 @@ header address a {
   gap: 24px;
   padding: 0;
   justify-content: center;
-  max-width: 900px;
+
   margin: 0 auto;
 }
 .ourport {
@@ -343,8 +339,11 @@ header address a {
 }
 
 .portfolio li:hover {
-  box-shadow: 0px 2px rgba(46, 47, 66, 0.08);
-  box-shadow: 0px 1px rgba(46, 47, 66, 0.08);
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08);
+
+  box-shadow: 0px 1px 1px 0px rgba(46, 47, 66, 0.16);
+
+  box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 .portimage-wrapper {
   position: relative;
@@ -399,4 +398,19 @@ header address a {
   gap: 24px;
   justify-content: center;
   margin-top: -70px;
+}
+
+.asocial-icon-wrapper,
+.asocialmedia {
+  width: 40px;
+  height: 40px;
+  list-style-type: none;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.asocialmedia:hover {
+  background-color: rgba(49, 208, 170, 1);
 }
